Finished GUI, AUTH, TOTP